# emporia-api

./: .gitignore  CHANGELOG.md  CODEOWNERS  LICENSE  README.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py  test-emporia-api.py  test_emporia_api.py
.github/workflows/: ci.yml  release.yml
emporia_api/: __init__.py  __version__.py  api.py
