[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "emporia-api"
dynamic = ["version"]
description = "Python API wrapper for Emporia Energy devices"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Andre Couture", email = "andre@example.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Home Automation",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["emporia", "energy", "monitoring", "ev-charger", "home-automation", "iot"]
dependencies = [
    "requests>=2.32.5",
    "boto3>=1.42.21",
    "warrant>=0.6.1",
    "python-jose[cryptography]>=3.3.0",
    "cryptography>=46.0.3",
    "python-dateutil>=2.9.0.post0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "bandit[toml]>=1.7.5",
    "safety>=3.0.0",
    "pip-audit>=2.6.0",
    "flake8>=7.0.0",
    "pylint>=3.0.0",
    "black>=24.0.0",
    "isort>=5.13.0",
    "build>=1.0.0",
    "twine>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/AndreCouture/emporia-api"
Repository = "https://github.com/AndreCouture/emporia-api"
Issues = "https://github.com/AndreCouture/emporia-api/issues"

[tool.bandit]
exclude_dirs = ["tests", "test_*.py"]
skips = ["B105", "B106"]  # Skip hardcoded password string checks (they're examples)

[tool.black]
line-length = 120
target-version = ['py39', 'py310', 'py311', 'py312', 'py313']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 120
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.pylint.messages_control]
max-line-length = 120
disable = [
    "C0103",  # Invalid name
    "C0114",  # Missing module docstring
    "C0115",  # Missing class docstring
    "C0116",  # Missing function docstring
    "R0913",  # Too many arguments
    "R0914",  # Too many local variables
]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-v --strict-markers --tb=short"
testpaths = ["."]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.setuptools.dynamic]
version = {attr = "emporia_api.__version__.__version__"}
